--- a/vs/test.vcxproj.filters
+++ b/vs/test.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\src\test\gpu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\test\dma.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\test\makefile">
