--- a/vs/ps.vcxproj
+++ b/vs/ps.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="..\src\asm_x86-64.h" />
     <ClInclude Include="..\src\cpu.h" />
     <ClInclude Include="..\src\disassembly.h" />
+    <ClInclude Include="..\src\dma.h" />
     <ClInclude Include="..\src\gpu.h" />
     <ClInclude Include="..\src\mem.h" />
     <ClInclude Include="..\src\mips.h" />
@@ -32,6 +33,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\asm_x86-64.cpp" />
     <ClCompile Include="..\src\cpu.cpp" />
+    <ClCompile Include="..\src\dma.cpp" />
     <ClCompile Include="..\src\gpu.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\mem.cpp" />
