--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\test\cpu.cpp" />
     <ClCompile Include="..\src\test\disassembly.cpp" />
+    <ClCompile Include="..\src\test\dma.cpp" />
     <ClCompile Include="..\src\test\gpu.cpp" />
     <ClCompile Include="..\src\test\jit.cpp" />
     <ClCompile Include="..\src\test\main.cpp" />
