Organize projects and files.

--- a/src/makefile
+++ b/src/makefile
@@ -2,9 +2,10 @@
 
 SOURCES += \
 	src/util.cpp \
-	src/main.cpp \
 	src/mem.cpp \
 	src/cpu.cpp \
 	src/asm_x86-64.cpp \
 	src/system.cpp \
 	src/mips.cpp \
+  src/dma.cpp \
+  src/gpu.cpp \
