--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -137,7 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\test\cpu.cpp" />
-    <ClCompile Include="..\src\test\disassembly.cpp" />
+    <ClCompile Include="..\src\test\inter.cpp" />
     <ClCompile Include="..\src\test\dma.cpp" />
     <ClCompile Include="..\src\test\gpu.cpp" />
     <ClCompile Include="..\src\test\jit.cpp" />
