--- a/vs/glad.vcxproj
+++ b/vs/glad.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{BA555571-119C-431D-9175-6C4B9DFD313D}</ProjectGuid>
-    <RootNamespace>test</RootNamespace>
+    <ProjectGuid>{78435B89-BE07-44FE-92A6-7330199E4605}</ProjectGuid>
+    <RootNamespace>glad</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -39,13 +39,13 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -71,13 +71,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)..\bin\</OutDir>
-    <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
-    <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
+    <IntDir>..\bin\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
+    <ExecutablePath>$(ProjectDir)..\bin;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>$(ProjectDir)..\deps\glad\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)..\bin\</OutDir>
-    <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
-    <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
+    <IntDir>..\bin\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
+    <ExecutablePath>$(ProjectDir)..\bin;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>$(ProjectDir)..\deps\glad\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -87,13 +89,11 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -113,11 +113,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,19 +134,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\test\cpu.cpp" />
-    <ClCompile Include="..\src\test\inter.cpp" />
-    <ClCompile Include="..\src\test\dma.cpp" />
-    <ClCompile Include="..\src\test\gpu.cpp" />
-    <ClCompile Include="..\src\test\jit.cpp" />
-    <ClCompile Include="..\src\test\main.cpp" />
-    <ClCompile Include="..\src\test\util.cpp" />
+    <ClCompile Include="..\deps\glad\src\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\src\test\makefile" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\src\test\test.h" />
+    <ClInclude Include="..\deps\glad\include\glad\glad.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
