--- a/vs/ps.vcxproj.filters
+++ b/vs/ps.vcxproj.filters
@@ -79,6 +79,15 @@
     <ClCompile Include="..\src\bus.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\gpu_shader.h">
+      <Filter>header</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\gpu_shader.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\gpu_sp.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\makefile">
