--- a/vs/ps.vcxproj
+++ b/vs/ps.vcxproj
@@ -38,6 +38,9 @@
     <ClCompile Include="..\src\cpu.cpp" />
     <ClCompile Include="..\src\dma.cpp" />
     <ClCompile Include="..\src\gpu.cpp" />
+    <ClCompile Include="..\src\gpu_shader.cpp" />
+    <ClCompile Include="..\src\gpu_shader.h" />
+    <ClCompile Include="..\src\gpu_sp.cpp" />
     <ClCompile Include="..\src\mem.cpp" />
     <ClCompile Include="..\src\mips.cpp" />
     <ClCompile Include="..\src\system.cpp" />
