null sound process.

--- a/vs/ps.vcxproj.filters
+++ b/vs/ps.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="..\src\serial_port.h">
       <Filter>header</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\spu.h">
+      <Filter>header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\asm_x86-64.cpp">
@@ -101,6 +104,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\serial_port.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\spu.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
