--- a/vs/ps.vcxproj
+++ b/vs/ps.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="..\src\mips.h" />
     <ClInclude Include="..\src\opengl-wrap.h" />
     <ClInclude Include="..\src\serial_port.h" />
+    <ClInclude Include="..\src\spu.h" />
     <ClInclude Include="..\src\system.h" />
     <ClInclude Include="..\src\util.h" />
     <ClCompile Include="..\src\bus.cpp" />
@@ -48,6 +49,7 @@
     <ClCompile Include="..\src\mips.cpp" />
     <ClCompile Include="..\src\opengl-wrap.cpp" />
     <ClCompile Include="..\src\serial_port.cpp" />
+    <ClCompile Include="..\src\spu.cpp" />
     <ClCompile Include="..\src\system.cpp" />
     <ClCompile Include="..\src\util.cpp" />
   </ItemGroup>
