--- a/vs/ps.vcxproj
+++ b/vs/ps.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="..\src\mem.h" />
     <ClInclude Include="..\src\mips.h" />
     <ClInclude Include="..\src\opengl-wrap.h" />
+    <ClInclude Include="..\src\otc.h" />
     <ClInclude Include="..\src\serial_port.h" />
     <ClInclude Include="..\src\spu.h" />
     <ClInclude Include="..\src\system.h" />
@@ -48,6 +49,7 @@
     <ClCompile Include="..\src\mem.cpp" />
     <ClCompile Include="..\src\mips.cpp" />
     <ClCompile Include="..\src\opengl-wrap.cpp" />
+    <ClCompile Include="..\src\otc.cpp" />
     <ClCompile Include="..\src\serial_port.cpp" />
     <ClCompile Include="..\src\spu.cpp" />
     <ClCompile Include="..\src\system.cpp" />
