--- a/vs/ps.vcxproj.filters
+++ b/vs/ps.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="..\src\otc.h">
       <Filter>header</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\gte.h">
+      <Filter>header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\asm_x86-64.cpp">
@@ -113,6 +116,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\otc.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\gte.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
