--- a/vs/ps.vcxproj
+++ b/vs/ps.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="..\src\asm.h" />
     <ClInclude Include="..\src\asm_x86-64.h" />
     <ClInclude Include="..\src\bus.h" />
+    <ClInclude Include="..\src\cdrom.h" />
     <ClInclude Include="..\src\cpu.h" />
     <ClInclude Include="..\src\gpu_shader.h" />
     <ClInclude Include="..\src\gte.h" />
@@ -41,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\asm_x86-64.cpp" />
+    <ClCompile Include="..\src\cdrom.cpp" />
     <ClCompile Include="..\src\cpu.cpp" />
     <ClCompile Include="..\src\dma.cpp" />
     <ClCompile Include="..\src\gpu.cpp" />
@@ -59,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
+    <None Include="..\src\bus.inl" />
     <None Include="..\src\makefile" />
   </ItemGroup>
   <ItemGroup>
