--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = deps/eigen
 	url = https://gitlab.com/libeigen/eigen.git
 	
+[submodule "deps/libcdio"]
+	path = deps/libcdio
+	url = https://github.com/ShiftMediaProject/libcdio.git
