--- a/vs/test.vcxproj.filters
+++ b/vs/test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\src\test\inter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\test\cd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\test\makefile">
