--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -73,11 +73,13 @@
     <OutDir>$(SolutionDir)..\bin\</OutDir>
     <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
     <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)..\bin\</OutDir>
     <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
     <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -94,7 +96,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -119,7 +121,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -138,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\test\cd.cpp" />
     <ClCompile Include="..\src\test\cpu.cpp" />
     <ClCompile Include="..\src\test\inter.cpp" />
     <ClCompile Include="..\src\test\dma.cpp" />
