--- a/vs/ps.vcxproj.filters
+++ b/vs/ps.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="..\src\cdrom.h">
       <Filter>header</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\time.h">
+      <Filter>header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\asm_x86-64.cpp">
@@ -125,6 +128,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\cdrom.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\time.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
