--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -96,7 +96,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;rtaudio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -147,6 +147,7 @@
     <ClCompile Include="..\src\test\gpu.cpp" />
     <ClCompile Include="..\src\test\jit.cpp" />
     <ClCompile Include="..\src\test\main.cpp" />
+    <ClCompile Include="..\src\test\spu.cpp" />
     <ClCompile Include="..\src\test\util.cpp" />
   </ItemGroup>
   <ItemGroup>
