--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -73,13 +73,13 @@
     <OutDir>$(SolutionDir)..\bin\</OutDir>
     <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
     <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(ProjectDir)..\deps;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)..\bin\</OutDir>
     <IntDir>..\bin\$(Platform)\$(Configuration)\test\</IntDir>
     <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)..\deps\libcdio\include;$(ProjectDir)..\deps;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -91,12 +91,15 @@
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/source-charset:utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;rtaudio.lib;r8bbase.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;rtaudio.lib;samplerate.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateMapFile>false</GenerateMapFile>
+      <AssemblyDebug>false</AssemblyDebug>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
