--- a/vs/test.vcxproj
+++ b/vs/test.vcxproj
@@ -97,7 +97,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;rtaudio.lib;samplerate.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>core.lib;glfw3.lib;glad.lib;libcdio.lib;rtaudio.lib;samplerate.lib;iir_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateMapFile>false</GenerateMapFile>
       <AssemblyDebug>false</AssemblyDebug>
     </Link>
