--- a/vs/ps.vcxproj.filters
+++ b/vs/ps.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClCompile Include="..\src\inter.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\cdrom-cmd.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\makefile">
